--- a/_posts/2013-06-09-using-pdo.md
+++ b/_posts/2013-06-09-using-pdo.md
@@ -5,7 +5,7 @@ description: Interfacing with a database for PHP web development.
 author: Tomas Basham
 comments: true
 category: Technology
-tags: technology
+tags: technology php database
 ---
 PHP Data Objects (PDO) is a database access layer providing a more secure and uniform interface for accessing and altering data within
 databases. Where most programmers learn to connect to MySQL databases with the MySQL or MySQLi extensions that can be prone to several
@@ -17,8 +17,7 @@ perform any database interactions by itself, but there are quite a few drivers a
 engines. Regardless of which database engine is being used, PDO abstracts the programmer from the underlying logic and uses the same
 functions to issue queries and fetch data; it's just simply a case of switching the driver being used.
 
-Connecting to a Database
-------------------------
+## Connecting to a Database
 
 I use a try/catch block approach when connecting to a database. This is because PDO throws exceptions when errors occur. I believe this
 is a better approach then using many if statements to determine the cause of the problem. To connect to a MySQL database a new PDO
@@ -30,38 +29,33 @@ This ensures a constant connection to the database that can improve performance 
 connection requests. However this does not come without downfalls (depending upon the situation of course). Two main concerns that can
 occur whilst using persistent connections are:
 
-  - **Transactions**: Having a persistent connection means that an Apache process considers all MySQL queries as part of that same transaction. This is bad if MySQL never issues a commit or a rollback because if something were to happen during a transaction some data may be lost. This can be solved by creating a register_shutdown_function() that does a database rollback.
-  - **Threads**: Also since there will only be a limited number of MySQL connections open at a time, there has to be enough database threads available to serve all these request. The best way around this is to ensure that there are always slightly more database threads than Apache threads to prevent Apache from blocking when trying to connect to MySQL more times then there are threads.
+* **Transactions**: Having a persistent connection means that an Apache process considers all MySQL queries as part of that same transaction. This is bad if MySQL never issues a commit or a rollback because if something were to happen during a transaction some data may be lost. This can be solved by creating a register_shutdown_function() that does a database rollback.
+* **Threads**: Also since there will only be a limited number of MySQL connections open at a time, there has to be enough database threads available to serve all these request. The best way around this is to ensure that there are always slightly more database threads than Apache threads to prevent Apache from blocking when trying to connect to MySQL more times then there are threads.
 
 Lastly I have set attributes on the connection to always fire exceptions when an error occurs. This is so error can be handled more
 gracefully.
 
+    try {
 
-	try {
-
-        // Create the connection.
-        $dbconn = new PDO ( "mysql:host=localhost;dbname=dbname", username, password, array ( PDO::ATTR_PERSISTENT => true ) );
-        $dbconn->setAttribute ( PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION );
-
+      // Create the connection.
+      $dbconn = new PDO ( "mysql:host=localhost;dbname=dbname", username, password, array ( PDO::ATTR_PERSISTENT => true ) );
+      $dbconn->setAttribute ( PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION );
     } catch ( PDOException $e ) {
 
-        // If the connection was unsuccessful then print
-        // out to the user this fact and kill the script.
-        file_put_contents ( 'PDOErrors.log', $e->getMessage (), FILE_APPEND );
+      // If the connection was unsuccessful then print
+      // out to the user this fact and kill the script.
+      file_put_contents ( 'PDOErrors.log', $e->getMessage (), FILE_APPEND );
 
-        // header ( 'HTTP/1.1 500 Internal Server Booboo' );
-        header ( 'Content-Type: application/json' );
-        die ( json_encode ( array ( 'message' => "Failed to connect to the database. Please try again.", code => 500 ) ) );
-
+      // header ( 'HTTP/1.1 500 Internal Server Booboo' );
+      header ( 'Content-Type: application/json' );
+      die ( json_encode ( array ( 'message' => "Failed to connect to the database. Please try again.", code => 500 ) ) );
     }
-
 
 In the catch block I have printed out the error to a file on the server in which this code is run, so that I can see what has gone
 wrong, whilst a more user friendly message is sent back to the client in a JSON formatted object so that it can be dealt with
 appropriately.
 
-Querying the Database
----------------------
+## Querying the Database
 
 When querying the database, I have used prepared statements to avoid such technical problems as SQL injection. Prepared statements
 escape the values that have been passed to it before issuing the query. Note in the code below that the MySQL statement has a
@@ -70,26 +64,21 @@ placeholder within it that starts with a colon and will be replaced with an esca
 If placeholders have been used, it is then necessary to replace them. The `bindParam` method is responsible for this. This method can
 also be used to dictate what datatype should be expected and throw an error if this condition is not met.
 
+    try {
+      $dbstat = $dbconn->prepare ( "INSERT INTO Table ( Value ) VALUES ( :value )" );
+      $dbstat->bindParam ( ":value", $_POST['value'], PDO::PARAM_STR );
+      $dbstat->execute ();
+    } catch ( PDOException $e ) {
 
-	try {
+      // If the query was unsuccessful, probably due to email
+      // address duplication, then print out to the user this
+      // fact and kill the script.
+      file_put_contents ( 'PDOErrors.log', $e->getMessage (), FILE_APPEND );
 
-		$dbstat = $dbconn->prepare ( "INSERT INTO Table ( Value ) VALUES ( :value )" );
-		$dbstat->bindParam ( ":value", $_POST['value'], PDO::PARAM_STR );
-		$dbstat->execute ();
-
-	} catch ( PDOException $e ) {
-
-		// If the query was unsuccessful, probably due to email
-		// address duplication, then print out to the user this
-		// fact and kill the script.
-		file_put_contents ( 'PDOErrors.log', $e->getMessage (), FILE_APPEND );
-
-		// header ( 'HTTP/1.1 400 Naughty Request' );
-		header ( 'Content-Type: application/json' );
-		die ( json_encode ( array ( 'message' => "Email already registered.", code => 400 ) ) );
-
-	}
-
+      // header ( 'HTTP/1.1 400 Naughty Request' );
+      header ( 'Content-Type: application/json' );
+      die ( json_encode ( array ( 'message' => "Email already registered.", code => 400 ) ) );
+    }
 
 As before, in the catch block I have printed out the error to a file on the server in which this code is run, so that I can see what
 has gone wrong. A JSON encoded object is also sent back to the client to be dealt with appropriately.
