Update post tags

--- a/_posts/2013-04-06-phabricator-101.md
+++ b/_posts/2013-04-06-phabricator-101.md
@@ -4,8 +4,8 @@ title: Phabricator 101
 description: Project management tool and code review.
 author: Tomas Basham
 comments: true
-category: Technology
-tags: technology git management
+category: Development
+tags: development devops git management phabricator
 ---
 Phabricator is our internal code review and project management tool. It is made up of a number of applications that perform certain tasks, the big ones are:
 
