--- a/_posts/2013-06-09-using-pdo.md
+++ b/_posts/2013-06-09-using-pdo.md
@@ -4,8 +4,8 @@ title: Using PDO
 description: Interfacing with a database for PHP web development.
 author: Tomas Basham
 comments: true
-category: Technology
-tags: technology php database
+category: Development
+tags: database development php
 ---
 PHP Data Objects (PDO) is a database access layer providing a more secure and uniform interface for accessing and altering data within databases. Where most programmers learn to connect to MySQL databases with the MySQL or MySQLi extensions that can be prone to several security pitfalls, such as SQL injection, PDO provides methods to create prepared statements, which clean dynamic user input thus preventing the same security risks that the older extensions suffer from.
 
