Post fixes and prevent code from being hyphenated

--- a/_posts/2013-06-09-using-pdo.md
+++ b/_posts/2013-06-09-using-pdo.md
@@ -17,7 +17,8 @@ I use a try/catch block approach when connecting to a database. This is because 
 
 Here I have also included an array of settings which includes only the argument to make connections to the MySQL database persistent. This ensures a constant connection to the database that can improve performance when there is a lot of traffic creating frequent connection requests. However this does not come without downfalls (depending upon the situation of course). Two main concerns that can occur whilst using persistent connections are:
 
-* **Transactions**: Having a persistent connection means that an Apache process considers all MySQL queries as part of that same transaction. This is bad if MySQL never issues a commit or a rollback because if something were to happen during a transaction some data may be lost. This can be solved by creating a register_shutdown_function() that does a database rollback.
+* **Transactions**: Having a persistent connection means that an Apache process considers all MySQL queries as part of that same transaction. This is bad if MySQL never issues a commit or a rollback because if something were to happen during a transaction some data may be lost. This can be solved by creating a `register_shutdown_function()` that does a database rollback.
+
 * **Threads**: Also since there will only be a limited number of MySQL connections open at a time, there has to be enough database threads available to serve all these request. The best way around this is to ensure that there are always slightly more database threads than Apache threads to prevent Apache from blocking when trying to connect to MySQL more times then there are threads.
 
 Lastly I have set attributes on the connection to always fire exceptions when an error occurs. This is so error can be handled more
