Highlight code with Jekyll and rouge

--- a/_posts/2013-04-06-phabricator-101.md
+++ b/_posts/2013-04-06-phabricator-101.md
@@ -50,9 +50,11 @@ branch. However if you use the same branching model as myself, where I create a
 develop branch off of the master branch and then further branch from this
 features branches, then you'll want to tell Phabricator to use the branch:
 
-    $ origin/develop
+{% highlight bash %}
+  $ origin/develop
+{% endhighlight %}
 
-## Quick Workflow Reference
+### Quick Workflow Reference
 
 This is how I use `arc` with Git.
 
@@ -68,47 +70,59 @@ Here's a very quick summary of the code review workflow. Phabricator will
 automatically unit test and lint (check the code for formatting errors) the
 code. To work on a new feature:
 
-    $ git checkout develop
-    $ git checkout -b newfeature
-    $ vim somefile.js
-    $ wip
-    $ arc diff
+{% highlight bash %}
+  $ git checkout develop
+  $ git checkout -b newfeature
+  $ vim somefile.js
+  $ wip
+  $ arc diff
+{% endhighlight %}
 
 To work on another feature afterward, or while you wait for review:
 
-    $ git checkout develop
-    $ git checkout -b newfeature2
-    $ ... # Continue as above
+{% highlight bash %}
+  $ git checkout develop
+  $ git checkout -b newfeature2
+  $ ... # Continue as above
+{% endhighlight %}
 
 To update a change:
 
-    $ mate somefile.js
-    $ squish
-    $ arc diff
+{% highlight bash %}
+  $ vim somefile.js
+  $ squish
+  $ arc diff
+{% endhighlight %}
 
 To pull in updates from other contributors:
 
-    $ git checkout develop
-    $ git pull
-    $ git checkout newfeature
-    $ git rebase develop
+{% highlight bash %}
+  $ git checkout develop
+  $ git pull
+  $ git checkout newfeature
+  $ git rebase develop
+{% endhighlight %}
 
 To commit a change to the develop branch:
 
-    $ arc land
+{% highlight bash %}
+  $ arc land
+{% endhighlight %}
 
-## Other commits
+### Other commits
 
 If you don't have commit permissions then an administrator can commit a diff
 into the repository for you (you need to create a diff).
 
-N.B. Requires admin permissions
+**Note**: This requires admin permissions.
 
-    arc patch --nobranch Dnnnn
-    git commit --amend -C HEAD --author 'team@domain.com'
-    git push
+{% highlight bash %}
+  arc patch --nobranch Dnnnn
+  git commit --amend -C HEAD --author 'team@domain.com'
+  git push
+{% endhighlight %}
 
-## General Guidelines
+### General Guidelines
 
 * Break large projects into **small steps that take no longer than a day or two
   to complete**. Most steps should be even smaller, and take no longer than a
