--- a/_posts/2013-06-09-using-pdo.md
+++ b/_posts/2013-06-09-using-pdo.md
@@ -55,21 +55,21 @@ that can occur whilst using persistent connections are:
 Lastly I have set attributes on the connection to always fire exceptions when
 an error occurs. This is so error can be handled more gracefully.
 
-    try {
+{% highlight php %}
+  try {
+    $dbconn = new PDO("mysql:host=localhost;dbname=dbname", username, password, array(PDO::ATTR_PERSISTENT => true));
+    $dbconn->setAttribute(PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION);
+  } catch(PDOException $e) {
 
-      // Create the connection.
-      $dbconn = new PDO ( "mysql:host=localhost;dbname=dbname", username, password, array ( PDO::ATTR_PERSISTENT => true ) );
-      $dbconn->setAttribute ( PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION );
-    } catch ( PDOException $e ) {
+    // If the connection was unsuccessful then print
+    // out to the user this fact and kill the script.
+    file_put_contents("PDOErrors.log", $e->getMessage(), FILE_APPEND);
 
-      // If the connection was unsuccessful then print
-      // out to the user this fact and kill the script.
-      file_put_contents ( 'PDOErrors.log', $e->getMessage (), FILE_APPEND );
-
-      // header ( 'HTTP/1.1 500 Internal Server Booboo' );
-      header ( 'Content-Type: application/json' );
-      die ( json_encode ( array ( 'message' => "Failed to connect to the database. Please try again.", code => 500 ) ) );
-    }
+    // header ( 'HTTP/1.1 500 Internal Server Booboo' );
+    header("Content-Type: application/json");
+    die(json_encode(array("message" => "Failed to connect to the database. Please try again.", code => 500)));
+  }
+{% endhighlight %}
 
 In the catch block I have printed out the error to a file on the server in
 which this code is run, so that I can see what has gone wrong, whilst a more
@@ -89,21 +89,23 @@ If placeholders have been used, it is then necessary to replace them. The
 dictate what datatype should be expected and throw an error if this condition
 is not met.
 
-    try {
-      $dbstat = $dbconn->prepare ( "INSERT INTO Table ( Value ) VALUES ( :value )" );
-      $dbstat->bindParam ( ":value", $_POST['value'], PDO::PARAM_STR );
-      $dbstat->execute ();
-    } catch ( PDOException $e ) {
+{% highlight php %}
+  try {
+    $dbstat = $dbconn->prepare("INSERT INTO Table(Value) VALUES(:value)");
+    $dbstat->bindParam(":value", $_POST['value'], PDO::PARAM_STR);
+    $dbstat->execute();
+  } catch(PDOException $e) {
 
-      // If the query was unsuccessful, probably due to email
-      // address duplication, then print out to the user this
-      // fact and kill the script.
-      file_put_contents ( 'PDOErrors.log', $e->getMessage (), FILE_APPEND );
+    // If the query was unsuccessful, probably due to email
+    // address duplication, then print out to the user this
+    // fact and kill the script.
+    file_put_contents("PDOErrors.log", $e->getMessage(), FILE_APPEND);
 
-      // header ( 'HTTP/1.1 400 Naughty Request' );
-      header ( 'Content-Type: application/json' );
-      die ( json_encode ( array ( 'message' => "Email already registered.", code => 400 ) ) );
-    }
+    // header ( 'HTTP/1.1 400 Naughty Request' );
+    header("Content-Type: application/json");
+    die(json_encode(array("message" => "Email already registered.", code => 400)));
+  }
+{% endhighlight %}
 
 As before, in the catch block I have printed out the error to a file on the
 server in which this code is run, so that I can see what has gone wrong. A JSON
